Fix help block wrapping and color, fix uneditable domain on failed form submission

--- a/console/app/assets/stylesheets/_forms.scss
+++ b/console/app/assets/stylesheets/_forms.scss
@@ -770,7 +770,7 @@ textarea[readonly] {
   .control-label { margin-left: 15px; width: 120px; text-align: left; color: #949494; }
   .error > .control-label { color: $errorBackground; }
 
-  .help-block { color: #949494; max-width: 500px; -moz-transition: 0.2s; overflow: hidden; text-overflow: ellipsis; }
+  .help-block { color: #949494 !important; max-width: 500px; -moz-transition: 0.2s; overflow: hidden; text-overflow: ellipsis; }
   .alert { max-width: 500px; }
 
   .form-actions { padding-left: 140px; }
